# packet

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  Makefile  out.js
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
fixtures/: function_expression.in.js  jquery-1.9.1.js
javascript/ast/: Cargo.toml
javascript/ast/src/: expression.rs  lib.rs  statement.rs
javascript/lexer/: Cargo.toml
javascript/lexer/src/: lib.rs
javascript/lexer/tests/: lexer_test.rs
javascript/parser/: Cargo.toml
javascript/parser/src/: expression.rs  import.rs  lib.rs  module.rs  statement.rs
javascript/parser/tests/: fixture_1_test.rs  parser_test.rs
javascript/printer/: Cargo.toml
javascript/printer/src/: lib.rs
javascript/printer/tests/: printer_test.rs
javascript/reporter/: Cargo.toml
javascript/reporter/src/: lib.rs
javascript/token/: Cargo.toml
javascript/token/src/: lib.rs
logger/src/: lib.rs
scripts/: run-fixtures.js  test-262.js
src/bundler/: Cargo.toml
src/bundler/src/: lib.rs
src/bundler/tests/: bundler_test.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/fs/: Cargo.toml
src/fs/src/: lib.rs
src/fs/tests/: fs_mock_tests.rs
src/js_ast/: Cargo.toml
src/js_ast/src/: binding.rs  class.rs  expression.rs  function.rs  lib.rs  literal.rs  object.rs  precedence.rs  statement.rs
src/js_ast_next/: Cargo.toml
src/js_ast_next/src/: array_binding_pattern.rs  array_expression.rs  array_hole.rs  assignment_expression.rs  binary_expression.rs  binding_identifier.rs  block_statement.rs  boolean_literal.rs  break_statement.rs  computed_property_name.rs  empty_statement.rs  expression_statement.rs  identifier_name.rs  identifier_reference.rs  label_identifier.rs  lexical_binding.rs  lexical_declaration.rs  lib.rs  null_literal.rs  numeric_literal.rs  object_binding_pattern.rs  object_expression.rs  precedence.rs  regexp_literal.rs  sequence_expression.rs  spread_element.rs  string_literal.rs  unary_expression.rs  update_expression.rs  variable_declaration.rs  variable_statement.rs
src/js_codegen/: Cargo.toml
src/js_codegen/src/: lib.rs
src/js_error/: Cargo.toml
src/js_error/src/: lib.rs
src/js_lexer/: Cargo.toml
src/js_lexer/src/: lib.rs  unicode.rs
src/js_lexer/tests/: lexer_test.rs
src/js_lexer_next/: Cargo.toml
src/js_lexer_next/src/: identifier.rs  lib.rs  number.rs  punctuators.rs  regexp.rs  string.rs  template.rs  token.rs  whitespace.rs
src/js_parser/: Cargo.toml
src/js_parser/src/: binding.rs  class.rs  expression.rs  function.rs  lib.rs  literal.rs  module.rs  object.rs  statement.rs
src/js_parser/tests/: fixture_1_test.rs  fixtures.rs  parser_test.rs
src/js_parser/tests/fixtures/: angular-1.2.5.js
src/js_parser_next/: Cargo.toml
src/js_parser_next/src/: binding.rs  lib.rs
src/js_parser_next/tests/: parser_test.rs
src/js_printer/: Cargo.toml
src/js_printer/src/: lib.rs
src/js_token/: Cargo.toml
src/js_token/src/: lib.rs
src/logger/: Cargo.toml
src/logger/src/: lib.rs
src/source/: Cargo.toml
src/source/src/: lib.rs
src/span/: Cargo.toml
src/span/src/: lib.rs
src/unicode/: Cargo.toml
