[workspace]

members = [
    "src/span",
    "src/js_error",
    "src/unicode",
    "src/js_codegen",
    "src/js_ast_next",
    "src/js_lexer_next",
    "src/js_parser_next",
    "src/js_token",
    "src/js_lexer",
    "src/js_ast",
    "src/js_parser",
    "src/js_printer",
    "src/bundler",
    "src/source",
    "src/fs",
    "src/cli",
    "src/logger",
]
