[package]
name = "cli"
version = "0.1.0"
authors = ["Jacob Jonsson <jacob.jonsson@schibsted.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
javascript_lexer = { path = "../javascript/lexer" }
javascript_parser = { path = "../javascript/parser" }
javascript_printer = { path = "../javascript/printer" }
logger = { path = "../logger" }
