[package]
name = "javascript_parser"
version = "0.1.0"
authors = ["Jacob Jonsson <jacob.jonsson@schibsted.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
javascript_lexer = { path = "../lexer" }
javascript_ast = { path = "../ast" }
javascript_token = { path = "../token" }
logger = { path = "../../logger" }

[dev-dependencies]
javascript_printer = { path = "../printer" }
