[package]
name = "bundler"
version = "0.1.0"
authors = ["Jacob Jonsson <jacobjjonsson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs = { path = "../fs" }
js_ast = { path = "../js_ast" }
js_lexer = { path = "../js_lexer" }
js_parser = { path = "../js_parser" }
logger = { path = "../logger" }
