[package]
name = "cli"
version = "0.1.0"
authors = ["Jacob Jonsson <jacob.jonsson@schibsted.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js_lexer = { path = "../js_lexer" }
js_parser = { path = "../js_parser" }
js_printer = { path = "../js_printer" }
logger = { path = "../logger" }
