[package]
name = "js_parser"
version = "0.1.0"
authors = ["Jacob Jonsson <jacob.jonsson@schibsted.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js_lexer = { path = "../js_lexer" }
js_ast = { path = "../js_ast" }
js_token = { path = "../js_token" }
logger = { path = "../logger" }
source = { path = "../source" }

[dev-dependencies]
js_printer = { path = "../js_printer" }
